# diyu-formal-init

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  MILESTONE.md  Makefile  README.md  docker-compose.production.yml  openapi.json  pyproject.toml  服装品牌组织型IP内容战略与知识库建设基线.docx  笛语项目路线图.html  讨论.txt  讨论1.txt
alembic/: env.py
deploy/: backup.sh  deploy.sh  install_deepseek_secret.sh  provision_ecs.sh  restore_verify.sh  rollback.sh  switch_public_route.sh
docs/: M3-1-P1弱种子内容生产纵向闭环执行包.md  M3-2-P1扩展攻击面与最小远程CI执行包.md  M4-1-D005墙面双层挂杆可用闭环执行包.md  M4-2-双应用自然入口与身份分流执行包.md  M5-1-P2-P5与价值路由执行包.md  M5-2-三平台与视频图文语境重编译执行包.md  M5-3-正式前端工作壳与渐进入驻执行包.md  M5-4-AIGC标识与内容竞争路线补充执行包.md  M5-4-共享ECS-SaaS上线执行包.md  M5-K-知识完整性与运行治理收口执行包.md  M6-1-笛语服饰最低真实资料入驻执行包.md  M6-2-小规模生产容量恢复与回退执行包.md  M6-3-真实品牌内容质量知识缺口与串味验证执行包.md  待决策清单.md  笛语第一阶段总体技术架构与路线图映射基线.md  笛语项目路线图.html  项目记忆.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: golden.sh  local_postgres.sh  run_app.sh  test.sh
src/: __init__.py
tests/: __init__.py  conftest.py  test_c1_catalog_and_scope.py  test_deepseek_adapter.py  test_display_vertical_slice.py  test_m3_2_scope_attack_surface.py  test_m4_2_application_entry.py  test_m5_1_value_routing.py  test_m5_2_media_recompile.py  test_m5_3_workbench.py  test_m5_4_production_auth.py  test_m6_1_real_tenant_onboarding.py  test_m6_2_capacity_and_limits.py  test_p1_vertical_slice.py  test_rls_isolation.py  test_system_asset_governance.py
笛语品牌数据库知识数据/: 笛语 ContentRole 角色表达卡 V1.md  笛语内容规则、红线与合规边界 V1.md  (+16 more)
(+269 files in other folders)
