[project]
name = "diyu-m3-p1"
version = "0.1.0"
description = "笛语 M3-1 P1 weak-seed vertical slice"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/gateway/api/app.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
